--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "treinaweb/projex",
+    "name": "ewertomacahdo/projex",
     "description": "Simples esqueleto para projetos MVC",
     "type": "project",
     "license": "MIT",
